// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateOfBirth.vue renders error message 1`] = `
<fieldset>
  <label
    class="subtitle has-margin-top-36"
    for="birthDate"
  >
    
  </label>
   
  <div
    class="field"
  >
    <div
      class="control is-clearfix has-icons-right"
    >
      <input
        autocomplete="on"
        class="input is-danger"
        id="birthDate"
        type="text"
      />
       
      <!---->
       
      <span
        class="icon is-right has-text-danger"
      >
        <i
          class="mdi mdi-alert-circle mdi-24px"
        />
      </span>
       
      <!---->
    </div>
  </div>
   
  <!---->
   
  <span
    class="help is-danger"
  >
    
  </span>
</fieldset>
`;

exports[`DateOfBirth.vue renders field 1`] = `
<fieldset>
  <label
    class="subtitle has-margin-top-36"
    for="birthDate"
  >
    
  </label>
   
  <div
    class="field"
  >
    <div
      class="control is-clearfix"
    >
      <input
        autocomplete="on"
        class="input"
        id="birthDate"
        type="text"
      />
       
      <!---->
       
      <!---->
       
      <!---->
    </div>
  </div>
   
  <span
    class="help has-text-dark-lighter"
  >
    
  </span>
   
  <!---->
</fieldset>
`;
